corrected agent config and swagger
